# Genai-Pipelines

./: README.md
04-multimodal/: README.md  pyproject.toml  requirements.txt
04-multimodal /notebooks/: exploration.ipynb
04-multimodal /src/: chunker.py  config.py  document_loader.py  embedder.py  generator.py  main.py  openai_client.py  retriever.py  vector_store.py
04-multimodal /tests/: test_document_loader.py  test_retriever.py
